working on java client user guide

--- a/docs/javaClientUserGuide/configuration.tex
+++ b/docs/javaClientUserGuide/configuration.tex
@@ -18,6 +18,7 @@ whole or in part.
 The following sections discuss the configuration pages in detail.
 
 \section{Automatic Updates}
+\label{sec:automatic_updates}
 The Java Client has the capability of detecting when a new version of the
 software has been made available by the software design team. The settings on
 this page allow the user to specify when updates will be searched for, when to
@@ -25,22 +26,22 @@ download them, and how to notify the user when they are found.
 
 \section{General}
 The settings on this page are general to the application.
-    \begin{figure}[H]
-      \centering
-      \scalebox{0.5}
-      { \includegraphics*{screenshots/configuration/prefs_general} }
-      \caption{General preferences.}
-      \label{fig:prefs_general}
-    \end{figure}
+\begin{figure}[H]
+  \centering
+  \scalebox{0.5}
+	   { \includegraphics*{screenshots/configuration/prefs_general} }
+	   \caption{General preferences.}
+	   \label{fig:prefs_general}
+\end{figure}
 \begin{description}
-  \item[Show software version in main window title] the Java Client's software
-    version can be displayed in the window's title bar by checking this
-    box.\textit{Note that this option is only required by technicians when they
-      are testing new versions of the software}.
-  \item[Show heap status] the \emph{heap status} can be displayed in the main
-    window by checking this box. The heap status gives an indication of the
-    memory used by the application. \textit{This option is in place for the
-      software designers and is not required for normal use}.
+\item[Show software version in main window title] the Java Client's software
+  version can be displayed in the window's title bar by checking this
+  box.\textit{Note that this option is only required by technicians when they
+    are testing new versions of the software}.
+\item[Show heap status] the \emph{heap status} can be displayed in the main
+  window by checking this box. The heap status gives an indication of the
+  memory used by the application. \textit{This option is in place for the
+    software designers and is not required for normal use}.
 \end{description}
 
 \section{Issue Tracker}
