--- a/docs/javaClientUserGuide/dispatch.tex
+++ b/docs/javaClientUserGuide/dispatch.tex
@@ -87,8 +87,8 @@ in section \ref{sec:config_send_remove}.
 \label{sec:dispatch_send}
 \begin{enumerate}
   \item Log into the BioBank2 Java Client as a user in the Website
-    Administrator group ({\color{red} which user groups should be allowed to
-      create dispatches?}).
+    Administrator group. \todo[size=\small]{which user groups should be allowed to
+      create dispatches?}%
   \item In the \emph{Working Site} pull down, select the site that is to send the
     dispatch.
   \item Using the main menu or the toolbar icon select \emph{Dispatch} view.
