--- a/docs/javaClientUserGuide/notdone.tex
+++ b/docs/javaClientUserGuide/notdone.tex
@@ -18,3 +18,14 @@
 \chapter{Reports}
 \label{chap:reports}
 \section{Logging}
+
+\chapter{Error Reporting}
+\label{chap:error_reporting}
+
+\begin{figure}[H]
+  \centering
+  \scalebox{0.5}
+	   { \includegraphics*{screenshots/error_reporting/send_error_email} }
+	   \caption{General preferences.}
+	   \label{fig:prefs_general}
+\end{figure}
