--- a/docs/javaClientUserGuide/overview.tex
+++ b/docs/javaClientUserGuide/overview.tex
@@ -1,51 +1,54 @@
 \chapter{Overview}
 The BioBank2 Java Client is designed to be a client application that connects
-to a server which provides services for storing inventory information for
-biological samples. More than one client can connect to the server at the same
-time. The client is a software application that runs on Microsoft Windows and
-Linux\footnote{The scanner cannot be used when using the application on Linux.}. The client
-software is a Java application and requires that a Java JRE or JDK be installed
-on the computer. The installation program for the client installs a Java JRE if
-it is not already present on the computer.
+to a BioBank2 server that provides services for storing inventory information
+for biological samples. More than one client can connect to the server at the
+same time. The client is a software application that runs on Microsoft Windows
+and Linux\footnote{The scanner cannot be used when using the application on
+  Linux.}. The client software is a Java application and requires that a Java
+JRE or JDK be installed on the computer. The installation program for the
+client installs a Java JRE if it is not already present on the computer.
 
-When running on Microsoft Windows, the client can connect to scanners use either
-TWAIN\footnote{\url{http://en.wikipedia.org/wiki/TWAIN}} or
+When running on Microsoft Windows, the client can communicate with scanners
+that use either TWAIN\footnote{\url{http://en.wikipedia.org/wiki/TWAIN}} or
 WIA\footnote{\url{http://en.wikipedia.org/wiki/Windows_Image_Acquisition}}
 drivers. Most scanners available on the market provide these
 drivers. Therefore, most scanners work with the client software.
 
+The client does not store any inventory information on the computer that it
+runs on. All the information is stored on the server. Any client connecting to
+this server will be able to see all the information on the server.
+
 Figure \ref{fig:main_window} shows the application's main window and highlights
-different some of its components.
-    \begin{figure}[H]
-      \centering
-      \scalebox{0.4}
-      { \includegraphics*{screenshots/overview/main_window} }
-      \caption{The Java Client's main window.}
-      \label{fig:main_window}
-    \end{figure}
+some of its components.
+\begin{figure}[H]
+  \centering
+  \scalebox{0.4}
+	   { \includegraphics*{screenshots/overview/main_window} }
+	   \caption{The Java Client's main window.}
+	   \label{fig:main_window}
+\end{figure}
 \begin{description}
-  \item[Window Title Bar] The title bar shows the connection information when
-    connected to a BioBank2 server. The domain name or IP address of the server
-    is displayed and in square brackets the user name that was used to log in.
-  \item[Main Menu] The main menu allows the user access to the different
-    functions provided by the software (see section \ref{sec:main_menu} for a
-    description of the menu items). The application also has an icon based
-    toolbar to access commonly used functions.
-  \item[Toolbar Icons] The icon buttons in the toolbar allow quick access to
-    often used menu items. Using the mouse, the user can hover over the icon
-    button and after 2 seconds a tooltip is displayed describing what the
-    button is for and if applicable the keyboard shortcut. Note that there is
-    an icon toolbar under the Main Menu and another grouped with the tree view.
-  \item[Tree View] The tree view shown here is for the \emph{Administration
-    View}. The application uses tree views in the \emph{Administration View}
-    and \emph{Processing View} (see section \ref{sec:application_views}). Tree
-    view shows nodes in a hierarchical structure. If a node has children a
-    \emph{plus} symbol is displayed next to the node. When the symbol is
-    pressed the node will expand to show its' child nodes.  Sometimes,
-    operations can be performed on certain nodes in the tree by right clicking
-    with the mouse on the node.
-  \item[Status Bar] The status bar is used to display the current state of the
-    application. It is usually updated after the user has completed a task.
+\item[Window Title Bar] The title bar shows the connection information when
+  connected to a BioBank2 server. The domain name or IP address of the server
+  is displayed and in square brackets the user name that was used to log in.
+\item[Main Menu] The main menu allows the user access to the different
+  functions provided by the software (see section \ref{sec:main_menu} for a
+  description of the menu items).
+\item[Toolbar Icons] The icon buttons in the toolbar allow quick access to
+  often used menu items. Using the mouse, the user can hover over the icon
+  button and after 2 seconds a tooltip is displayed describing what the
+  button is for and if applicable the keyboard shortcut. Note that there is
+  an icon toolbar under the Main Menu and another grouped with the tree view.
+\item[Tree View] The tree view shown here is for the \emph{Administration
+  View}. The application uses tree views in the \emph{Administration View}
+  and \emph{Processing View} (see section \ref{sec:application_views}). Tree
+  view shows nodes in a hierarchical structure. If a node has children, a
+  \emph{plus} symbol is displayed next to the node. When the symbol is
+  pressed the node will expand to show its' child nodes.  Sometimes,
+  operations can be performed on certain nodes in the tree by right clicking
+  with the mouse on the node.
+\item[Status Bar] The status bar is used to display the current state of the
+  application. It is usually updated after the user has completed a task.
 \end{description}
 
 \section{Main Menu}
@@ -54,59 +57,65 @@ different some of its components.
 \subsection{Server Menu}
 The \emph{Server} main menu item allows the user to login or logout from a
 server and to quit the application.
-    \begin{figure}[H]
-      \centering
-      \scalebox{0.5}
-      { \includegraphics*{screenshots/overview/main_menu_server} }
-      \caption{Server menu.}
-      \label{fig:main_menu_server}
-    \end{figure}
-The items unser the \emph{Server} main menu item are as follows:
+\begin{figure}[H]
+  \centering
+  \scalebox{0.5}
+	   { \includegraphics*{screenshots/overview/main_menu_server} }
+	   \caption{Server menu.}
+	   \label{fig:main_menu_server}
+\end{figure}
+The items under the \emph{Server} main menu item are as follows:
 \begin{description}
-  \item[Login] Allows the user to login to a BioBank2 server. On startup and
-    when logged out this menu item is enabled. When logged into a server this
-    menu item is disabled. Also, the \mbox{\fbox{Ctrl} + \fbox{L}} keyboard
-    short cut can be used to perform this function.
-  \item[Logout] Allows the user to log out and close the connection to a
-    BioBank2 server. On startup this menu item is disabled. The item is enabled
-    only when the user has succesfully logged in to a BioBank2 server. Also,
-    the \mbox{\fbox{Ctrl} + \fbox{Shift} + \fbox{L}} keyboard short cut can be
-    used to perform this function.
-  \item[Quit] Shuts down the application. Also, the \mbox{\fbox{Ctrl} +
-    \fbox{Q}} keyboard short cut can be used to perform this function.
+\item[Login] Allows the user to login to a BioBank2 server. On startup and
+  when logged out this menu item is enabled. When logged into a server this
+  menu item is disabled. Also, the \mbox{\fbox{Ctrl} + \fbox{L}} keyboard
+  short cut can be used to perform this function.
+\item[Logout] Allows the user to log out and close the connection to a
+  BioBank2 server. On startup this menu item is disabled. The item is enabled
+  only when the user has succesfully logged in to a BioBank2 server. Also,
+  the \mbox{\fbox{Ctrl} + \fbox{Shift} + \fbox{L}} keyboard short cut can be
+  used to perform this function.
+\item[Quit] Shuts down the application. Also, the \mbox{\fbox{Ctrl} +
+  \fbox{Q}} keyboard short cut can be used to perform this function.
 \end{description}
 
 \subsection{Administration Menu}
-The items under the \emph{Administration} menu allows the user to perform
+The items under the \emph{Administration} menu allow the user to perform
 administration tasks such as: add repository sites, clinics, studies, container
 types and containers. Global information such as Sample Types, Source Vessels,
 Shipping methods can also be edited. Adding, Editing users and changing user
 passwords is also available.
 
 These functions are discussed in detail in Chapter \ref{chap:administration}.
-    \begin{figure}[H]
-      \centering
-      \scalebox{0.5}
-      { \includegraphics*{screenshots/overview/main_menu_administration} }
-      \caption{Administration menu.}
-      \label{fig:main_menu_administration}
-    \end{figure}
+\begin{figure}[H]
+  \centering
+  \scalebox{0.5}
+	   { \includegraphics*{screenshots/overview/main_menu_administration} }
+	   \caption{Administration menu.}
+	   \label{fig:main_menu_administration}
+\end{figure}
 
 \subsection{Processing Menu}
 The \emph{Processing} main menu item provides access to the patient processing
-functions. These functions are the ones that are used most on a day to day
-basis. Please refer to Chapter \ref{chap:processing}.
-    \begin{figure}[H]
-      \centering
-      \scalebox{0.5}
-      { \includegraphics*{screenshots/overview/main_menu_processing} }
-      \caption{Processing menu.}
-      \label{fig:main_menu_processing}
-    \end{figure}
+functions. These functions are the most often used functions on a day to day
+basis. Please refer to Chapter \ref{chap:processing} for more details.
+\begin{figure}[H]
+  \centering
+  \scalebox{0.5}
+	   { \includegraphics*{screenshots/overview/main_menu_processing} }
+	   \caption{Processing menu.}
+	   \label{fig:main_menu_processing}
+\end{figure}
 
 \subsection{View Menu}
 This menu allows the user to change to a different view. The views allow the
-user to focus on different activities.
+user to focus on different activities such as:
+\begin{itemize}
+\item Administration
+\item Sample Processing
+\item Inventory Reports
+\item Activity Logs
+\end{itemize}
 
 See section \ref{sec:application_views} for more information on views.
 
@@ -118,56 +127,56 @@ See section \ref{sec:application_views} for more information on views.
 \subsection{Scanner Menu}
 These functions are for testing the scanning and decoding parameters in the
 preferences (see section \ref{sec:scanning_and_decoding}).
-    \begin{figure}[H]
-      \centering
-      \scalebox{0.5}
-      { \includegraphics*{screenshots/overview/main_menu_scanner} }
-      \caption{Scanner menu.}
-      \label{fig:main_menu_scanner}
-    \end{figure}
+\begin{figure}[H]
+  \centering
+  \scalebox{0.5}
+	   { \includegraphics*{screenshots/overview/main_menu_scanner} }
+	   \caption{Scanner menu.}
+	   \label{fig:main_menu_scanner}
+\end{figure}
 \begin{description}
-  \item[Scan Plate] Once the scanning regions have been assigned, use this menu
-    item to view the image that will be scanned for the plates that were
-    defined.
-  \item[Decode Plate] Once the decoding parameters have been changed, use this
-    menu item to see how well the decoding performs.
+\item[Scan Plate] Once the scanning regions have been assigned, use this menu
+  item to view the image that will be scanned for the plates that were
+  defined.
+\item[Decode Plate] Once the decoding parameters have been changed, use this
+  menu item to see how well the decoding performs.
 \end{description}
 
 \subsection{Search Menu}
 The only item under this menu is the \textbf{Search Panel}.
-    \begin{figure}[H]
-      \centering
-      \scalebox{0.5}
-      { \includegraphics*{screenshots/overview/main_menu_search} }
-      \caption{Search menu.}
-      \label{fig:main_menu_search}
-    \end{figure}
+\begin{figure}[H]
+  \centering
+  \scalebox{0.5}
+	   { \includegraphics*{screenshots/overview/main_menu_search} }
+	   \caption{Search menu.}
+	   \label{fig:main_menu_search}
+\end{figure}
 Figure \ref{fig:search_panel} shows the search panel in the Adminstration
 view. It is also available in the processing view.
-    \begin{figure}[H]
-      \centering
-      \scalebox{0.5}
-      { \includegraphics*{screenshots/overview/search_panel} }
-      \caption{Search panel.}
-      \label{fig:search_panel}
-    \end{figure}
+\begin{figure}[H]
+  \centering
+  \scalebox{0.5}
+	   { \includegraphics*{screenshots/overview/search_panel} }
+	   \caption{Search panel.}
+	   \label{fig:search_panel}
+\end{figure}
 The search panel allows the user to search for any of the following:
 \begin{description}
-  \item[An inventory ID] each aliquot has a unique identifier referred to as
-    the inventory ID. This is the decoded value of the 2D barcode for NUNC
-    tubes, the 1D barcode for hair and FTA aliquots, and the 1D barcode for
-    Axygen tubes.
-  \item[An aliquot Position] each aliquot is stored in a unique position. For
-    NUNC tubes it is the well position pre appended with the pallet's labe.
-  \item[Non-active aliquots] Aliquots that have been removed from the inventory
-    are assigned a \emph{Non Active} activity status. When this search is used
-    the list of all aliquots marked as non active is returned.
-  \item[A container label] Each container in the inventory has a position
-    label. The label uses the labeling scheme defined by the parent label.
-  \item[A container's product barcode] Each container in the system has a
-    unique product barcode.
-  \item[A worksheet] Each patient visit has a unique corresponding worksheet in
-    paper form. A patient visit can be searched for using this ID.
+\item[An inventory ID] each aliquot has a unique identifier referred to as
+  the inventory ID. This is the decoded value of the 2D barcode for NUNC
+  tubes, the 1D barcode for hair and FTA aliquots, and the 1D barcode for
+  Axygen tubes.
+\item[An aliquot Position] each aliquot is stored in a unique position. For
+  NUNC tubes it is the well position pre appended with the pallet's label.
+\item[Non-active aliquots] Aliquots that have been removed from the inventory
+  are assigned a \emph{Non Active} activity status. When this search is used
+  the list of all aliquots marked as non active is returned.
+\item[A container label] Each container in the inventory has a position
+  label. The label uses the labeling scheme defined by the parent label.
+\item[A container's product barcode] Each container in the system has a
+  unique product barcode.
+\item[A worksheet] Each patient visit has a unique corresponding worksheet in
+  paper form. A patient visit can be searched for using this ID.
 \end{description}
 When an item is searched for the application will: inform you how many items
 were found if there are more than one, or open up a form displaying the
@@ -181,23 +190,45 @@ displayed for the aliquot. When searching for a container label, the
 \subsection{Configuration Menu}
 This menu only contains the preferences item. See Chapter
 \ref{chap:configuration} for more details.
-    \begin{figure}[H]
-      \centering
-      \scalebox{0.5}
-      { \includegraphics*{screenshots/overview/main_menu_configuration} }
-      \caption{Configuration menu.}
-      \label{fig:main_menu_configuration}
-    \end{figure}
+\begin{figure}[H]
+  \centering
+  \scalebox{0.5}
+	   { \includegraphics*{screenshots/overview/main_menu_configuration} }
+	   \caption{Configuration menu.}
+	   \label{fig:main_menu_configuration}
+\end{figure}
 
 \subsection{Help Menu}
 The help menu provides access to several functions.
-    \begin{figure}[H]
-      \centering
-      \scalebox{0.5}
-      { \includegraphics*{screenshots/overview/main_menu_help} }
-      \caption{Help menu.}
-      \label{fig:main_menu_help}
-    \end{figure}
+\begin{figure}[H]
+  \centering
+  \scalebox{0.5}
+	   { \includegraphics*{screenshots/overview/main_menu_help} }
+	   \caption{Help menu.}
+	   \label{fig:main_menu_help}
+\end{figure}
+\begin{description}
+\item[Keyboard Shortcuts] displays the functions associated with all the
+  keyboard shortcuts.
+\item[Send Error Mail] if the user encounters a software error, he / she can
+  send an email to the software design team. By using this function the error
+  log information is attached to the email and aids the team in diagnosing the
+  problem. See chapter \ref{chap:error_reporting} for more information.
+\item[Export Error Logs] Used to save the error logs to a file. Used for
+  debugging purposes only and normal users are not required to use this
+  function.
+\item[Show Application Error Logs] Displays the error logs in a window inside
+  the client. Used for debugging purposes only and normal users are not
+  required to use this function.
+\item[Reset Perspective] Resets the window layout inside the client. Used for
+  debugging purposes only and normal users are not required to use this
+  function.
+\item[Check for Updates] Used to check and download new version of the java
+client. Software updates can be scheduled in the configuration section. See
+section \ref{sec:automatic_updates} for more details.
+\item[Install New Software] \todo[size=\small]{Are we using this?}.
+\item[About BioBank2] Displays the Java Clients software version information.
+\end{description}
 
 \section{Views}
 \label{sec:application_views}
@@ -205,18 +236,18 @@ The help menu provides access to several functions.
 The application has been designed with the following views to aid the user in
 focusing on a particular high level task. The views are as follows:
 \begin{itemize}
-  \item The \textbf{Administration View} is used to configure the repository
-    site. This deals with the studies and clinics associated with the
-    repository sites on the server. Also the view allows the user to configure
-    the containers used by the repository sites. See Chapter
-    \ref{chap:administration} for more details on this view.
-  \item The \textbf{Processing View} deals with accepting patient samples and
-    storing the derived aliquots in a repository site. As well, dispatching
-    samples between sites can be done with this view. See Chapter
-    \ref{chap:processing} for more details on this view.
-  \item The \textbf{Reports View} deals with querying information form the
-    database. Pre-defined reports can be executed in this view as well as
-    allowing the user to create his / her own reports. In addition, the user
-    activity logs can also be queried in this view.  See Chapter
-    \ref{chap:reports} for more details on this view.
+\item The \textbf{Administration View} is used to configure the repository
+  site. This deals with the studies and clinics associated with the
+  repository sites on the server. Also the view allows the user to configure
+  the containers used by the repository sites. See Chapter
+  \ref{chap:administration} for more details on this view.
+\item The \textbf{Processing View} deals with accepting patient samples and
+  storing the derived aliquots in a repository site. As well, dispatching
+  samples between sites can be done with this view. See Chapter
+  \ref{chap:processing} for more details on this view.
+\item The \textbf{Reports View} deals with querying information form the
+  database. Pre-defined reports can be executed in this view as well as
+  allowing the user to create his / her own reports. In addition, the user
+  activity logs can also be queried in this view.  See Chapter
+  \ref{chap:reports} for more details on this view.
 \end{itemize}
