fix to database upgrade script

--- a/docs/javaClientUserGuide/document.tex
+++ b/docs/javaClientUserGuide/document.tex
@@ -6,6 +6,8 @@
 \usepackage{graphicx}
 \usepackage{float}
 \usepackage{multirow}
+
+
 %\usepackage[colorlinks]{hyperref}
 \usepackage[colorinlistoftodos, textwidth=3cm, textsize=tiny, shadow]{todonotes}
 \usepackage[pdftex,
@@ -53,8 +55,8 @@ by the Alberta Ingenuity Centre for Machine Learning}
 \include{configuration}
 \include{patient_processing}
 \include{sample_order}
-%need to have dispatch as chapter 5
 \include{dispatch}
+\include{administration}
 \include{notdone}
 
 \backmatter
