working on java client user guide

--- a/docs/javaClientUserGuide/configuration.tex
+++ b/docs/javaClientUserGuide/configuration.tex
@@ -1,7 +1,7 @@
 \chapter{Configuration}
 \label{chap:configuration}
 The configuration settings for the Java Client can be found by selecting
-\texttt{Configuration} \to \texttt{Preferences} from the main menu.
+\texttt{Configuration} $\to$ \texttt{Preferences} from the main menu.
     \begin{figure}[H]
       \centering
       \scalebox{0.5}
