--- a/docs/javaClientUserGuide/document.tex
+++ b/docs/javaClientUserGuide/document.tex
@@ -1,8 +1,10 @@
 \documentclass[10pt,twoside,letterpaper]{book}
 \usepackage[T1]{fontenc}
 \usepackage{bookman}
-\usepackage[active]{srcltx}
 \usepackage{color}
+\usepackage{amsmath}
+\usepackage{amsfonts}
+\usepackage[active]{srcltx}
 \usepackage{graphicx}
 \usepackage{float}
 \usepackage{multirow}
@@ -19,6 +21,8 @@
   bookmarksopen=true,
   pdfstartview=FitH]
 	   {hyperref}
+
+\DeclareMathAlphabet{\mathpzc}{OT1}{pzc}{m}{it}
 
 % no indentation at beginning of paragraph, and 1 line separating paragraphs
 \setlength{\parindent}{0pt}
