--- a/docs/javaClientUserGuide/overview.tex
+++ b/docs/javaClientUserGuide/overview.tex
@@ -226,7 +226,7 @@ The help menu provides access to several functions.
 \item[Check for Updates] Used to check and download new version of the java
 client. Software updates can be scheduled in the configuration section. See
 section \ref{sec:automatic_updates} for more details.
-\item[Install New Software] \todo[size=\small]{Are we using this?}.
+\item[Install New Software] \todo[size=\small]{Are we using this?}%.
 \item[About BioBank2] Displays the Java Clients software version information.
 \end{description}
 
