--- a/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/messages.properties
+++ b/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/messages.properties
@@ -129,3 +129,20 @@ DecodePlate.dialog.scanError.title=Scan result error
 #Scan Plate
 ScanPlate.tabTitle=Scan Plate
 ScanPlate.dialog.scanError.title=Scan result error
+
+#GroupEditDialog
+GroupEditDialog.msg.error.name.used=This name is already used.
+GroupEditDialog.msg.error.retrieve.sites=Cannot retrieve sites list
+GroupEditDialog.msg.name.required=A valid name is required.
+GroupEditDialog.msg.persit.error=Unable to Save Group
+GroupEditDialog.property.title.name=Name
+GroupEditDialog.site.administrator.title=Is Site administrator
+GroupEditDialog.site.list.available=Available sites
+GroupEditDialog.site.list.canUpdate=Can update sites
+GroupEditDialog.site.list.readonly=Read only sites
+GroupEditDialog.title.add=Add Group
+GroupEditDialog.title.edit=Edit Group
+GroupEditDialog.titlearea.add=Add a new group
+GroupEditDialog.titlearea.modify=Modify an existing group's information
+GroupEditDialog.feature.list.selected=Features enabled
+GroupEditDialog.feature.list.available=Features available
