update study and clinic forms labels + resolves #992

--- a/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/messages.properties
+++ b/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/messages.properties
@@ -1,3 +1,56 @@
+# Common labels
+label.name=Name
+label.nameShort=Short name
+label.activity=Activity status
+label.comments=Comments
+
+
+# Study Forms
+study.visit.info.dateProcessed=Date Processed
+StudyViewForm.title=Study {0}
+StudyViewForm.field.label.total.patients=Total patients
+StudyViewForm.field.label.total.patientVisits=Total patient visits
+StudyViewForm.clinic.title=Clinic Information
+StudyViewForm.source.specimen.title=Source specimens types
+StudyViewForm.aliquoted.specimen.title=Aliquoted specimens types
+StudyViewForm.visit.info.attributes.title=Patient Visit Information Collected
+StudyViewForm.visit.info.msg=Study does not collect additional patient visit information
+StudyEntryForm.creation.msg=Creating a new study.
+StudyEntryForm.edition.msg=Editing an existing study.
+StudyEntryForm.title.new=New study
+StudyEntryForm.title.edit=Study {0}
+StudyEntryForm.main.title=Study Information
+StudyEntryForm.contacts.title=Clinics / Contacts
+StudyEntryForm.activity.validator.msg=Study must have an activity status
+StudyEntryForm.aliquoted.specimens.button.add=Add aliquoted Specimen type
+StudyEntryForm.aliquoted.specimens.title=Aliquoted specimen types
+StudyEntryForm.contacts.button.add=Add Clinic Contact
+StudyEntryForm.name.validator.msg=Study name cannot be blank
+StudyEntryForm.nameShort.validator.msg=Study short name cannot be blank
+StudyEntryForm.source.specimens.button.add=Add source specimen types
+StudyEntryForm.source.specimens.title=Source specimen types
+StudyEntryForm.visit.info.title=Patient Visit Information Collected
+
+# Clinic Forms
+clinic.field.label.sendsShipments=Sends Shipments
+clinic.contact.title=Contacts
+ClinicViewForm.title=Clinic {0}
+ClinicViewForm.field.label.totalShipments=Total Shipments
+ClinicViewForm.field.label.totalPatients=Total Patients
+ClinicViewForm.field.label.totalPatientVisits=Total Patient Visits
+ClinicViewForm.studies.title=Studies
+ClinicViewForm.shipments.title=Shipments
+ClinicEntryForm.creation.msg=New clinic information.
+ClinicEntryForm.msg.ok=Clinic information.
+ClinicEntryForm.msg.noClinicName=Clinic must have a name
+ClinicEntryForm.title.new=New Clinic
+ClinicEntryForm.title.edit=Clinic {0}
+ClinicEntryForm.main.title=Clinic Information
+ClinicEntryForm.main.description=Clinics can be associated with studies after submitting this initial information.
+ClinicEntryForm.activity.validator.msg=Clinic must have an activity status
+ClinicEntryForm.contact.button.add=Add contact
+
+
 # common to all LinkAssign forms
 linkAssign.plateToScan.label=Plate to scan
 linkAssign.scanButton.text=Launch scan
@@ -59,11 +112,11 @@ ScanAssign.activitylog.aliquot.dispatchedError=ERROR in {0}: Cannot assign posit
 ScanAssign.activitylog.aliquot.moved=MOVED in {0}: aliquot {1} registered on another position: {2}
 ScanAssign.activitylog.aliquot.otherSite=ERROR in {0}: aliquot {1} registered in another site: {2} in position: {3}
 ScanAssign.activitylog.aliquot.typeError=ERROR in {0}: this pallet type {1} can''t hold an aliquot that contains a sample of type {2}
-ScanAssign.activitylog.aliquot.assigned=ASSIGNED position {0} (site {1}) to aliquot {2} - Type: {3} - Patient: {4} - Visit: {5}-{6}\n
+ScanAssign.activitylog.aliquot.assigned=ASSIGNED position {0} (site {1}) to aliquot {2} - Type\: {3} - Patient\: {4} - Visit\: {5}-{6}\n
 ScanAssign.activitylog.save.summary=SCAN-ASSIGN: {0} aliquots added to pallet {1} of site {2}
 ScanAssign.okMessage=Assigning aliquots location.
 ScanLink.activitylog.aliquot.existsError=ERROR in {0}: Aliquot {1} already in database linked to visit {2} of patient {3} (done by site {4})
-ScanLink.activitylog.aliquot.linked=LINKED: {0} - patient: {1} - site: {2} - Visit: {3} - {4} - {5}\n
+ScanLink.activitylog.aliquot.linked=LINKED\: {0} - patient\: {1} - site\: {2} - Visit\: {3} - {4} - {5}\n
 ScanLink.activitylog.save.summary=SCAN-LINK: {0} aliquots linked to patient {1} on site {2} for visit drawn on {3} (processed on {4})
 Cabinet.activitylog.checkingId=Checking inventoryID {0}
 Cabinet.activitylog.checkingPosition=Checking position {0}
