update containertype form

--- a/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/messages.properties
+++ b/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/messages.properties
@@ -50,6 +50,51 @@ ClinicEntryForm.main.description=Clinics can be associated with studies after su
 ClinicEntryForm.activity.validator.msg=Clinic must have an activity status
 ClinicEntryForm.contact.button.add=Add contact
 
+# Container Forms
+container.field.label.site=Repository Site
+container.field.label.label=Label
+container.field.label.barcode=Product Bar Code
+container.field.label.type=Container Type
+container.field.label.temperature=Temperature
+ContainerViewForm.title=Container {0} ({1})
+
+#ContainerType Forms
+containerType.field.label.site=Repository Site
+containerType.field.label.topLevel=Top Level Container
+containerType.field.label.rows=Rows
+containerType.field.label.cols=Columns
+containerType.field.label.temperature=Default Temperature\n(Celcius)
+containerType.field.label.scheme=Child Labeling Scheme
+ContainerTypeViewForm.title=Container Type {0}
+ContainerTypeViewForm.specimens.title=Contains specimens
+ContainerTypeViewForm.specimens.label=Specimens types:
+ContainerTypeViewForm.types.title=Contains Container Types
+ContainerTypeViewForm.types.label=Container types:
+ContainerTypeViewForm.visual=Container Visual
+ContainerTypeEntryForm.creation.msg=Creating a new storage type.
+ContainerTypeEntryForm.edition.msg=Editing an existing storage type.
+ContainerTypeEntryForm.name.validation.msg=Container type must have a name
+ContainerTypeEntryForm.nameShort.validation.msg=Container type must have a short name
+ContainerTypeEntryForm.scheme.validation.msg=Select a child labeling scheme
+ContainerTypeEntryForm.scheme.error.msg=Error setting the labeling scheme
+ContainerTypeEntryForm.rows.validation.msg=Row capacity is not a valid number
+ContainerTypeEntryForm.cols.validation.msg=Column capacity is not a valid number
+ContainerTypeEntryForm.temperature.validation.msg=Default temperature is not a valid number
+ContainerTypeEntryForm.activity.validation.msg=Container type must have an activity status
+ContainerTypeEntryForm.new.title=New Container Type
+ContainerTypeEntryForm.edit.title=Container Type {0} 
+ContainerTypeEntryForm.main.title=Container Type Information
+ContainerTypeEntryForm.contents.title=Contents
+ContainerTypeEntryForm.contents.button.container=Contains Containers
+ContainerTypeEntryForm.contents.button.specimen=Contains specimens
+ContainerTypeEntryForm.contents.specimen.selected=Selected specimen types
+ContainerTypeEntryForm.contents.specimen.available=Available specimen types
+ContainerTypeEntryForm.contents.subcontainer.selected=Selected specimen types
+ContainerTypeEntryForm.contents.subcontainer.available=Available Sub-Container Types
+ContainerTypeEntryForm.save.error.msg.specimen.added=Problem with added sample types
+ContainerTypeEntryForm.save.error.msg.specimen.removed=Problem with removed sample types
+ContainerTypeEntryForm.save.error.msg.subcontainer.added=Problem with added child container types
+ContainerTypeEntryForm.save.error.msg.subcontainer.removed=Problem with removed child container types
 
 # common to all LinkAssign forms
 linkAssign.plateToScan.label=Plate to scan
