update patientviewform + patientVisitInfotable moved into CollectionEventInfoTable

--- a/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/messages.properties
+++ b/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/messages.properties
@@ -96,6 +96,21 @@ ContainerTypeEntryForm.save.error.msg.specimen.removed=Problem with removed samp
 ContainerTypeEntryForm.save.error.msg.subcontainer.added=Problem with added child container types
 ContainerTypeEntryForm.save.error.msg.subcontainer.removed=Problem with removed child container types
 
+# Patient Forms
+PatientViewForm.title=Patient {0}
+patient.field.label.study=Study
+PatientViewForm.label.totalVisits=Total Visits
+PatientViewForm.label.totalSourceSpecimens=Total source specimens
+PatientViewForm.label.totalAliquotedSpecimens=Total aliquoted specimens
+PatientViewForm.visits.title=Collection events
+
+# Collection Event Forms
+CollectionEventInfoTable.header.visitNumber=Visit number
+CollectionEventInfoTable.header.dateDrawn=Date Drawn
+CollectionEventInfoTable.header.numSourceSpecimens=Num source specimens
+CollectionEventInfoTable.header.numAliquotedSpecimens=Num aliquoted specimens
+CollectionEventInfoTable.header.comment=Comment
+
 # common to all LinkAssign forms
 linkAssign.plateToScan.label=Plate to scan
 linkAssign.scanButton.text=Launch scan
