update partially ScanLinkForm

--- a/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/messages.properties
+++ b/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/messages.properties
@@ -103,6 +103,18 @@ PatientViewForm.label.totalVisits=Total Visits
 PatientViewForm.label.totalSourceSpecimens=Total source specimens
 PatientViewForm.label.totalAliquotedSpecimens=Total aliquoted specimens
 PatientViewForm.visits.title=Collection events
+PatientEntryForm.creation.msg=Creating a new patient record.
+PatientEntryForm.edition.msg=Editing an existing patient record.
+PatientEntryForm.patientNumber.validation.msg=Patient must have a patient number
+PatientEntryForm.study.validation.msg=Enter a valid study short name
+PatientEntryForm.new.title=New Patient
+PatientEntryForm.edit.title=Patient {0}
+PatientEntryForm.main.title=Patient Information
+PatientEntryForm.field.study.label=Study
+PatientEntryForm.field.study.validation.msg=A study should be selected
+PatientEntryForm.field.pNumber.label=Patient Number
+PatientEntryForm.retrieve.error.msg=Error while retrieving patient {0}
+
 
 # Collection Event Forms
 CollectionEventInfoTable.header.visitNumber=Visit number
@@ -205,9 +217,11 @@ ScanLink.rowChoice.label=Row choice
 ScanLink.sampleType.select.validationMsg=Give a type to each aliquot
 ScanLink.scanError.validationMsg=Errors in scan \!
 ScanLink.tabTitle=Scan Link
-ScanLink.visit.label.drawn=Visit date drawn
-ScanLink.visit.label.processed=Visit date processed
-ScanLink.visit.validationMsg=A visit should be selected
+ScanLink.visit.label.drawn=Collection date drawn
+ScanLink.visit.validationMsg=A collection event should be selected
+ScanLink.visit.label="Visit #{0} - Drawn {1}
+ScanLink.worksheet.label=Worksheet
+
 
 #Cabinet
 Cabinet.button.move.text=Move aliquot
