add working site selection at login if more than one working site is available

--- a/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/messages.properties
+++ b/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/messages.properties
@@ -1,3 +1,34 @@
+# Login dialog
+LoginDialog.title=Login to a BioBank server
+LoginDialog.description=Enter server name and login details.
+LoginDialog.field.server.validation.msg=Server field cannot be empty
+LoginDialog.field.server.label=&Server
+LoginDialog.field.server.url.error.title=Invalid Server URL
+LoginDialog.field.server.url.error.msg=Please enter a valid server URL.
+LoginDialog.field.secure.connection=Use secure connection
+LoginDialog.field.user.validation.msg=Username field cannot be empty
+LoginDialog.field.user.label=&User Name
+LoginDialog.field.user.error.title=Invalid User Name
+LoginDialog.field.user.error.msg=User Name field must not be blank.
+LoginDialog.field.password.validaton.msg=Password field cannot be empty
+LoginDialog.field.password.label=&Password
+LoginDialog.working.center.error.title=Problem getting user working centres
+LoginDialog.no.working.center.error.msg=No working centre has been found for this user. \
+Check with your manager or application administrator for user rights.
+LoginDialog.working.center.admin.title=Super administrator mode
+LoginDialog.no.working.center.admin.msg=No working centre has been found or selected for this user. \
+You are super administrator, so you will be log on with no working centre. \
+Only no centre specific actions will be available. 
+LoginDialog.working.center.selection.error.title=Working centre selection
+LoginDialog.working.center.selection.error.msg=You need to select the centre you want to work with.
+
+# WorkingCenterSelectDialog
+WorkingCenterSelectDialog.title=Working centre selection
+WorkingCenterSelectDialog.description=You have more than one working centre: \
+choose the one you will work with.
+
+LoginDialog.user.error.title=Invalid User Name
+
 # Common labels
 label.name=Name
 label.nameShort=Short name
