--- a/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/messages.properties
+++ b/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/messages.properties
@@ -33,6 +33,31 @@ label.activity=Activity status
 validation.activity=An activity status should be selected
 label.comments=Comments
 
+# Site Forms
+SiteViewForm.field.studyCount.label=Total Studies
+site.field.type.label=Container Types
+SiteViewForm.field.topLevelCount.label=Top Level Containers
+SiteViewForm.field.patientCount.label=Total Patients
+SiteViewForm.field.pvCount.label=Total Patient Visits
+SiteViewForm.field.totalSpecimen=Total specimens
+SiteViewForm.types.title=Container Types
+SiteViewForm.type.add=Add Container Type
+SiteViewForm.topContainers.title=Top Level Containers
+SiteViewForm.topContainers.add=Add Container
+SiteViewForm.title=Repository Site {0}
+SiteEntryForm.creation.msg=Create a new BioBank site.
+SiteEntryForm.edition.msg=Edit a BioBank site.
+SiteEntryForm.title.new=New Repository Site
+SiteEntryForm.title.edit=Repository Site {0}
+SiteEntryForm.main.title=Repository Site Information
+SiteEntryForm.main.description=Studies, clinics, containers and container types \
+can be added after submitting this information.
+SiteEntryForm.field.name.validation.msg=Site must have a name
+SiteEntryForm.field.nameShort.validation.msg=Site short name cannot be blank
+SiteEntryForm.field.activity.validation.msg=Site must have an activity status
+SiteEntryForm.studies.title=Studies
+SiteEntryForm.studies.add=Add Study 
+
 # Study Forms
 study.visit.info.dateProcessed=Date Processed
 StudyViewForm.title=Study {0}
