modify SpecimenInfoTable and SpecimenEntryInfoTable

--- a/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/messages.properties
+++ b/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/messages.properties
@@ -168,12 +168,15 @@ PatientEntryForm.field.study.validation.msg=A study should be selected
 PatientEntryForm.field.pNumber.label=Patient Number
 PatientEntryForm.retrieve.error.msg=Error while retrieving patient {0}
 
-# Collection Event Forms
+# Collection Event Forms and tables
 CollectionEventInfoTable.header.visitNumber=Visit number
 CollectionEventInfoTable.header.dateDrawn=Date Drawn
 CollectionEventInfoTable.header.numSourceSpecimens=Num source specimens
 CollectionEventInfoTable.header.numAliquotedSpecimens=Num aliquoted specimens
 CollectionEventInfoTable.header.comment=Comment
+CollectionEventEntryForm.creation.msg=Creating a new patient visit record.
+CollectionEventEntryForm.edition.msg=Editing an existing patient visit record.
+CollectionEventEntryForm.field.visitNumber.validation.msg=Visit must have a number
 
 # SourceSpecimen table and dialog
 SourceSpecimenEntryInfoTable.delete.title=Delete source specimen
@@ -199,6 +202,20 @@ AliquotedSpecimen.field.volume.label=Volume (ml)
 AliquotedSpecimen.field.validation.msg=Volume should be a real number
 AliquotedSpecimen.field.quantity.label=Quantity
 AliquotedSpecimen.field.quantity.validation.msg=Quantity should be a whole number
+
+# Specimen dialog and table
+SpecimenDialog.title.add=Add specimen
+SpecimenDialog.title.edit=Edit specimen
+SpecimenDialog.msg.add=Add a source vessel to a patient visit
+SpecimenDialog.msg.edit=Edit a source vessel in a patient visit
+SpecimenDialog.field.type.label=Type
+SpecimenDialog.field.type.validation.msg=A source vessel should be selected
+SpecimenDialog.field.type.checkbox=Show only study source specimens
+SpecimenDialog.field.time.label=Time drawn
+SpecimenDialog.field.quantity.label=Quantity (ml)
+SpecimenDialog.field.quantity.validation.msg=Quantity is required.
+SpecimenEntryInfoTable.delete.title=Delete specimen
+SpecimenEntryInfoTable.delete.question=Are you sure you want to delete source vessel "{0}"?
 
 # common to all LinkAssign forms
 linkAssign.plateToScan.label=Plate to scan
