others collectionsevent / specimen modifications

--- a/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/messages.properties
+++ b/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/messages.properties
@@ -185,8 +185,9 @@ SourceSpecimenDialog.add.title=Add source specimen types
 SourceSpecimenDialog.add.msg=Add a source specimen type to this study
 SourceSpecimenDialog.edit.title=Edit source specimen types
 SourceSpecimenDialog.edit.msg=Edit a source specimen type of this study
+SourceSpecimen.field.inventoryId.label=Inventory Id
 SourceSpecimen.field.type.label=Specimen type
-SourceSpecimen.field.type.validation.msg=A source vessel should be selected
+SourceSpecimen.field.type.validation.msg=A specimen type should be selected
 SourceSpecimen.field.timeDrawn.label=Need Time Drawn
 SourceSpecimen.field.originalVolume.label=Need Original Volume
 
@@ -206,16 +207,16 @@ AliquotedSpecimen.field.quantity.validation.msg=Quantity should be a whole numbe
 # Specimen dialog and table
 SpecimenDialog.title.add=Add specimen
 SpecimenDialog.title.edit=Edit specimen
-SpecimenDialog.msg.add=Add a source vessel to a patient visit
-SpecimenDialog.msg.edit=Edit a source vessel in a patient visit
+SpecimenDialog.msg.add=Add a specimen to a collection event
+SpecimenDialog.msg.edit=Edit a specimen in a collection event
 SpecimenDialog.field.type.label=Type
-SpecimenDialog.field.type.validation.msg=A source vessel should be selected
+SpecimenDialog.field.type.validation.msg=A specimen type should be selected
 SpecimenDialog.field.type.checkbox=Show only study source specimens
 SpecimenDialog.field.time.label=Time drawn
 SpecimenDialog.field.quantity.label=Quantity (ml)
 SpecimenDialog.field.quantity.validation.msg=Quantity is required.
 SpecimenEntryInfoTable.delete.title=Delete specimen
-SpecimenEntryInfoTable.delete.question=Are you sure you want to delete source vessel "{0}"?
+SpecimenEntryInfoTable.delete.question=Are you sure you want to delete specimen "{0}"?
 
 # common to all LinkAssign forms
 linkAssign.plateToScan.label=Plate to scan
