improve scan link form

--- a/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/messages.properties
+++ b/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/messages.properties
@@ -228,7 +228,7 @@ linkAssign.scanValidValidationMsg=Errors in scanning result
 linkAssign.dialog.scanError.title=Scan result error
 
 # ScanAssign
-ScanAssign.formTitle=Assign aliquot locations
+ScanAssign.formTitle=Assign specimen locations
 ScanAssign.productBarcode.label=Pallet product barcode
 ScanAssign.productBarcode.validationMsg=Enter product barcode
 ScanAssign.palletLabel.label=Pallet label
@@ -239,15 +239,15 @@ ScanAssign.tabTitle=Scan Assign
 ScanAssign.dialog.noPalletFoundError.title=No Pallet defined ?
 ScanAssign.dialog.noPalletFoundError.msg=No child container types found with 8 rows and 12 columns
 ScanAssign.dialog.reallySave.title=Really save ?
-ScanAssign.scanStatus.aliquot.missing=Aliquot {0} missing
-ScanAssign.scanStatus.aliquot.notlinked=Aliquot not linked
-ScanAssign.scanStatus.aliquot.moved=Aliquot registered on another position: {0}
-ScanAssign.scanStatus.aliquot.otherSite=Aliquot has a position in another site (site {0})
-ScanAssign.scanStatus.aliquot.typeError=This pallet type {0} can''t hold an aliquot that contains a sample of type {1}
-ScanAssign.scanStatus.aliquot.positionTakenError=Aliquot different from the one registered at this position
-ScanAssign.scanStatus.aliquot.dispatchedError=Cannot assign position to an aliquot that in dispatch transit
-ScanAssign.dialog.saveWithMissing.msg=Aliquots are missing from this pallet, are you sure you want to save ? \
-These aliquots will still be registered at their current position.
+ScanAssign.scanStatus.aliquot.missing=Specimen {0} missing
+ScanAssign.scanStatus.aliquot.notlinked=Specimen not linked
+ScanAssign.scanStatus.aliquot.moved=Specimen registered on another position: {0}
+ScanAssign.scanStatus.aliquot.otherSite=Specimen has a position in another site (site {0})
+ScanAssign.scanStatus.aliquot.typeError=This pallet type {0} can''t hold a specimen of type {1}
+ScanAssign.scanStatus.aliquot.positionTakenError=Specimen different from the one registered at this position
+ScanAssign.scanStatus.aliquot.dispatchedError=Cannot assign position to a specimen that in dispatch transit
+ScanAssign.dialog.saveWithMissing.msg=Specimens are missing from this pallet, are you sure you want to save ? \
+These specimens will still be registered at their current position.
 ScanAssign.dialog.checkPallet.otherPosition=This pallet is already registered in the database in position {0}. \
 Do you want to move it to new position {1} ?
 ScanAssign.dialog.positionUsed.error.title=Position error
@@ -259,8 +259,8 @@ ScanAssign.dialog.positionUsed.noBarcode.question=This position is already used 
 linkAssign.activitylog.scanning=----SCAN on plate {0}----
 linkAssign.activitylog.rescanning=----RESCAN on plate {0}----
 linkAssign.activitylog.patient=Found patient with number {0}
-linkAssign.activitylog.visit.selection=Visit selected on site {0}; Drawn: {1}; Processed: {2}; Clinic: {3}
-linkAssign.activitylog.scanRes.total=Scan completed - {0} aliquots found
+linkAssign.activitylog.visit.selection=Collection event selected on site {0}; Drawn: {1}; Processed: {2}; Clinic: {3}
+linkAssign.activitylog.scanRes.total=Scan completed - {0} specimens found
 linkAssign.activitylog.scanTubeAlone=Tube {0} scanned and set to position {1}
 ScanAssign.activitylog.pallet.checkLabelForProductBarcode=Checking label position {0} for product barcode {1} of site {2}
 ScanAssign.activitylog.error=ERROR: {0}
@@ -272,63 +272,69 @@ ScanAssign.activitylog.pallet.typeUsed=Pallet container type used: {0}
 ScanAssign.activitylog.pallet.positionUsedMsg=Pallet with product barcode {0} is already in position {1} in site {2}
 ScanAssign.activitylog.pallet.moved=MOVED: Pallet {0} of type {1} moved from position {2} to position {3} (in site {4})
 ScanAssign.activitylog.pallet.added=ADDED: Pallet {0} of type {1} to position {2} of site {3}
-ScanAssign.activitylog.aliquot.missing=MISSING in {0}: aliquot {1} from visit {2} (patient {3}) missing
-ScanAssign.activitylog.aliquot.notlinked=ERROR in {0}: aliquot {1} not linked to any patient
+ScanAssign.activitylog.aliquot.missing=MISSING in {0}: specimen {1} from visit {2} (patient {3}) missing
+ScanAssign.activitylog.aliquot.notlinked=ERROR in {0}: specimen {1} not linked to any patient
 ScanAssign.activitylog.aliquot.positionTaken=ERROR in {0}: Expected inventoryId {1} from patient {2} -- Found inventoryId {3} from patient {4}
-ScanAssign.activitylog.aliquot.dispatchedError=ERROR in {0}: Cannot assign position to an aliquot that still is in dispatch transit
-ScanAssign.activitylog.aliquot.moved=MOVED in {0}: aliquot {1} registered on another position: {2}
-ScanAssign.activitylog.aliquot.otherSite=ERROR in {0}: aliquot {1} registered in another site: {2} in position: {3}
-ScanAssign.activitylog.aliquot.typeError=ERROR in {0}: this pallet type {1} can''t hold an aliquot that contains a sample of type {2}
-ScanAssign.activitylog.aliquot.assigned=ASSIGNED position {0} (site {1}) to aliquot {2} - Type\: {3} - Patient\: {4} - Visit\: {5}-{6}\n
-ScanAssign.activitylog.save.summary=SCAN-ASSIGN: {0} aliquots added to pallet {1} of site {2}
-ScanAssign.okMessage=Assigning aliquots location.
-ScanLink.activitylog.aliquot.existsError=ERROR in {0}: Aliquot {1} already in database linked to visit {2} of patient {3} (done by site {4})
+ScanAssign.activitylog.aliquot.dispatchedError=ERROR in {0}: Cannot assign position to a specimen that still is in dispatch transit
+ScanAssign.activitylog.aliquot.moved=MOVED in {0}: specimen {1} registered on another position: {2}
+ScanAssign.activitylog.aliquot.otherSite=ERROR in {0}: specimen {1} registered in another site: {2} in position: {3}
+ScanAssign.activitylog.aliquot.typeError=ERROR in {0}: this pallet type {1} can''t hold a specimen of type {2}
+ScanAssign.activitylog.aliquot.assigned=ASSIGNED position {0} (site {1}) to specimen {2} - Type\: {3} - Patient\: {4} - Visit\: {5}-{6}\n
+ScanAssign.activitylog.save.summary=SCAN-ASSIGN: {0} specimens added to pallet {1} of site {2}
+ScanAssign.okMessage=Assigning specimens location.
+ScanLink.activitylog.aliquot.existsError=ERROR in {0}: Specimen {1} already in database linked to visit {2} of patient {3} (done by site {4})
 ScanLink.activitylog.aliquot.linked=LINKED\: {0} - patient\: {1} - site\: {2} - Visit\: {3} - {4} - {5}\n
-ScanLink.activitylog.save.summary=SCAN-LINK: {0} aliquots linked to patient {1} on site {2} for visit drawn on {3} (processed on {4})
+ScanLink.activitylog.save.summary=SCAN-LINK: {0} specimens linked to patient {1} on site {2} for visit drawn on {3} (processed on {4})
 Cabinet.activitylog.checkingId=Checking inventoryID {0}
 Cabinet.activitylog.checkingPosition=Checking position {0}
 Cabinet.activitylog.checkPosition.error=ERROR: Position {0} already in use in container {1}
 Cabinet.activitylog.checkingParent=Checking parent container{0} for type {1}
-Cabinet.activitylog.checkParent.error.type=Bin labelled {0} cannot hold aliquots that contain a sample of type {1}
+Cabinet.activitylog.checkParent.error.type=Bin labelled {0} cannot hold specimens of type {1}
 Cabinet.activitylog.checkParent.error.found=Can''t find bin labelled {0} in site {1}
 Cabinet.activitylog.checkParent.error=ERROR: {0}
 Cabinet.activitylog.gettingInfoId=Getting informations for inventoryID {0}
-Cabinet.activitylog.aliquotInfo=Aliquot {0}: current position={1}
-Cabinet.activitylog.aliquot.saveNew=LINKED/ASSIGNED: position {0} to aliquot {1} - Type: {2} - Patient: {3} - Visit: {4}-{5}
-Cabinet.activitylog.aliquot.saveMove=ASSIGNED: position {0} to aliquot {1} - Type: {2} - Patient: {3} - Visit: {4}-{5}
+Cabinet.activitylog.aliquotInfo=Specimen {0}: current position={1}
+Cabinet.activitylog.aliquot.saveNew=LINKED/ASSIGNED: position {0} to specimen {1} - Type: {2} - Patient: {3} - Visit: {4}-{5}
+Cabinet.activitylog.aliquot.saveMove=ASSIGNED: position {0} to specimen {1} - Type: {2} - Patient: {3} - Visit: {4}-{5}
 
 #Scan Link
-ScanLink.scanStatus.aliquot.alreadyExists=Aliquot already in database
-ScanLink.custom.type.label=Choose type for selected aliquots:
+ScanLink.scanStatus.aliquot.alreadyExists=Specimen already in database
+ScanLink.custom.type.label=Choose type for selected specimens:
 ScanLink.customChoice.label=Custom Selection choice
 ScanLink.dialog.patient.errorMsg=Error getting the patient
-ScanLink.dialog.sampleTypesError.msg=No sample type found for containers of size 8*12
-ScanLink.dialog.sampleTypesError.title=Sample Types
-ScanLink.form.title=Link aliquots to patient visit using the scanner
-ScanLink.okMessage=Linking Aliquots to visits.
+ScanLink.dialog.sampleTypesError.msg=No specimen type found for containers of size 8*12
+ScanLink.dialog.sampleTypesError.title=Specimen types
+ScanLink.form.title=Link aliquoted specimens to their source specimen using the scanner
+ScanLink.okMessage=Linking specimens.
 ScanLink.patientNumber.label=Patient Number
 ScanLink.patientNumber.validationMsg=Enter a patient number
 ScanLink.rowChoice.label=Row choice
-ScanLink.sampleType.select.validationMsg=Give a type to each aliquot
+ScanLink.sampleType.select.validationMsg=Give a type to each specimen
 ScanLink.scanError.validationMsg=Errors in scan \!
 ScanLink.tabTitle=Scan Link
 ScanLink.visit.label.drawn=Collection date drawn
 ScanLink.visit.validationMsg=A collection event should be selected
 ScanLink.visit.label="Visit #{0} - Drawn {1}
 ScanLink.worksheet.label=Worksheet
+ScanLink.aliquotedSpecimenTypes.error.title=No specimen types
+ScanLink.aliquotedSpecimenTypes.error.msg=There are no specimen types that are defined \
+in study {0} and that are authorized inside a pallet.
+
+AliquotedSpecimenSelectionWidget.selections.validation.msg=A source specimen type and an aliquoted specimen type should be selected
+AliquotedSpecimenSelectionWidget.selections.status.msg=Type should be selected
 
 
 #Cabinet
-Cabinet.button.move.text=Move aliquot
-Cabinet.button.new.text=New aliquot
+Cabinet.button.move.text=Move specimen
+Cabinet.button.new.text=New specimen
 Cabinet.checkButton.text=Check
 Cabinet.canLaunchCheck.msg=Errors previously found. Cannot launch check.
 Cabinet.checkButton.validationMsg=Click on check
 Cabinet.dialog.notType.error.msg=No container type found with name containing ''{0}''
 Cabinet.dialog.noType.error.title=No container type
-Cabinet.dialog.sampleType.container.error.title=Sample types
-Cabinet.dialog.sampleType.container.error.msg=No sample type found for container which type name contains ''{0}''
-Cabinet.formTitle=Link and Assign Cabinet Aliquots
+Cabinet.dialog.sampleType.container.error.title=Specimen types
+Cabinet.dialog.sampleType.container.error.msg=No specimen types found for container which type name contains ''{0}''
+Cabinet.formTitle=Link and Assign Cabinet specimens
 Cabinet.inventoryId.label=Inventory ID
 Cabinet.patientNumber.label=Patient Number
 Cabinet.patientNumber.validationMsg=Enter a patient number
@@ -337,11 +343,11 @@ Cabinet.old.position.check.label=Old position check
 Cabinet.position.label=Position
 Cabinet.new.position.label=New position
 Cabinet.position.validationMsg=Enter a position
-Cabinet.sampleType.label=Sample type
-Cabinet.sampleType.validationMsg=A sample type should be selected
+Cabinet.sampleType.label=Specimen type
+Cabinet.sampleType.validationMsg=A specimen type should be selected
 Cabinet.tabTitle=Cabinet Link/Assign
-Cabinet.visit.label=Visit
-Cabinet.visit.validationMsg=A visit should be selected
+Cabinet.visit.label=Collection event
+Cabinet.visit.validationMsg=A collection event should be selected
 Cabinet.checkStatus.error=Position {0} already in use in container {1}
 
 #Decode Plate
