--- a/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/messages.properties
+++ b/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/messages.properties
@@ -169,13 +169,19 @@ PatientEntryForm.field.pNumber.label=Patient Number
 PatientEntryForm.retrieve.error.msg=Error while retrieving patient {0}
 
 # Collection Event Forms and tables
-CollectionEventInfoTable.header.visitNumber=Visit number
+CollectionEventInfoTable.header.visitNumber=Visit#
 CollectionEventInfoTable.header.dateDrawn=Date Drawn
 CollectionEventInfoTable.header.numSourceSpecimens=Num source specimens
 CollectionEventInfoTable.header.numAliquotedSpecimens=Num aliquoted specimens
 CollectionEventInfoTable.header.comment=Comment
 CollectionEventEntryForm.creation.msg=Creating a new patient visit record.
 CollectionEventEntryForm.edition.msg=Editing an existing patient visit record.
+CollectionEventEntryForm.main.title=Collection Event Information
+CollectionEventEntryForm.title.new=New collection event
+CollectionEventEntryForm.title.edit=Collection event, visit# {0}
+CollectionEventEntryForm.field.study.label=Study
+CollectionEventEntryForm.field.patient.label=Patient
+CollectionEventEntryForm.field.visitNumber.label=Visit#
 CollectionEventEntryForm.field.visitNumber.validation.msg=Visit must have a number
 
 # SourceSpecimen table and dialog
