ScanLink is working (if the processing event exists)

--- a/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/messages.properties
+++ b/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/messages.properties
@@ -142,7 +142,7 @@ ContainerTypeEntryForm.contents.button.container=Contains Containers
 ContainerTypeEntryForm.contents.button.specimen=Contains specimens
 ContainerTypeEntryForm.contents.specimen.selected=Selected specimen types
 ContainerTypeEntryForm.contents.specimen.available=Available specimen types
-ContainerTypeEntryForm.contents.subcontainer.selected=Selected specimen types
+ContainerTypeEntryForm.contents.subcontainer.selected=Selected Sub-Container types
 ContainerTypeEntryForm.contents.subcontainer.available=Available Sub-Container Types
 ContainerTypeEntryForm.save.error.msg.specimen.added=Problem with added sample types
 ContainerTypeEntryForm.save.error.msg.specimen.removed=Problem with removed sample types
