--- a/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/messages.properties
+++ b/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/messages.properties
@@ -183,6 +183,13 @@ CollectionEventEntryForm.field.study.label=Study
 CollectionEventEntryForm.field.patient.label=Patient
 CollectionEventEntryForm.field.visitNumber.label=Visit#
 CollectionEventEntryForm.field.visitNumber.validation.msg=Visit must have a number
+CollectionEventEntryForm.specimens.title=Source specimens
+CollectionEventEntryForm.specimens.add.title=Add specimens
+CollectionEventEntryForm.specimenstypes.error.msg=Error retrieving source vessels
+CollectionEventViewForm.title=Visit {0}
+CollectionEventViewForm.main.title=Collection Event for visit {0}
+CollectionEventViewForm.specimens.title=Source Specimens
+
 
 # SourceSpecimen table and dialog
 SourceSpecimenEntryInfoTable.delete.title=Delete source specimen
@@ -262,8 +269,7 @@ These specimens will still be registered at their current position.
 ScanAssign.dialog.checkPallet.otherPosition=This pallet is already registered in \
 the database in position {0}. Do you want to move it to new position {1} ?
 ScanAssign.dialog.positionUsed.error.title=Position error
-ScanAssign.dialog.positionUsed.error.msg=There is already a different pallet \
-(product barcode = {0}) in this position of site {1}
+ScanAssign.dialog.positionUsed.error.msg=There is already a different pallet (product barcode \= {0}) in this position of site {1}
 ScanAssign.dialog.positionUsed.noBarcode.title=Position used with no barcode
 ScanAssign.dialog.positionUsed.noBarcode.question=This position is already used \
 but the product barcode was not set. Do you want to set a product barcode ?
@@ -273,8 +279,7 @@ ScanAssign.validation.error.title=Values validation
 linkAssign.activitylog.scanning=----SCAN on plate {0}----
 linkAssign.activitylog.rescanning=----RESCAN on plate {0}----
 linkAssign.activitylog.patient=Found patient with number {0}
-linkAssign.activitylog.visit.selection=Collection event selected on site {0}; \
-Drawn: {1}; Processed: {2}; Clinic: {3}
+linkAssign.activitylog.visit.selection=Collection event selected on site {0}; Drawn\: {1}; Processed\: {2}; Clinic\: {3}
 linkAssign.activitylog.scanRes.total=Scan completed - {0} specimens found
 linkAssign.activitylog.scanTubeAlone=Tube {0} scanned and set to position {1}
 ScanAssign.activitylog.pallet.checkLabelForProductBarcode=Checking label position {0} \
@@ -291,33 +296,23 @@ to position {2}
 ScanAssign.activitylog.pallet.typeUsed=Pallet container type used: {0}
 ScanAssign.activitylog.pallet.positionUsedMsg=Pallet with product barcode {0} is \
 already in position {1} in site {2}
-ScanAssign.activitylog.pallet.moved=MOVED: Pallet {0} of type {1} moved from \
-position {2} to position {3} (in site {4})
-ScanAssign.activitylog.pallet.added=ADDED: Pallet {0} of type {1} to position {2} \
-of site {3}
-ScanAssign.activitylog.aliquot.missing=MISSING in {0}: specimen {1} from visit {2} \
-(patient {3}) missing
+ScanAssign.activitylog.pallet.moved=MOVED\: Pallet {0} of type {1} moved from position {2} to position {3} (in site {4})
+ScanAssign.activitylog.pallet.added=ADDED\: Pallet {0} of type {1} to position {2} of site {3}
+ScanAssign.activitylog.aliquot.missing=MISSING in {0}\: specimen {1} from visit {2} (patient {3}) missing
 ScanAssign.activitylog.aliquot.notlinked=ERROR in {0}: specimen {1} not linked to any patient
-ScanAssign.activitylog.aliquot.positionTaken=ERROR in {0}: Expected inventoryId {1} \
-from patient {2} -- Found inventoryId {3} from patient {4}
-ScanAssign.activitylog.aliquot.dispatchedError=ERROR in {0}: Cannot assign position \
-to a specimen that still is in dispatch transit
-ScanAssign.activitylog.aliquot.moved=MOVED in {0}: specimen {1} registered on another \
-position: {2}
-ScanAssign.activitylog.aliquot.otherSite=ERROR in {0}: specimen {1} registered in \
-another site: {2} in position: {3}
-ScanAssign.activitylog.aliquot.typeError=ERROR in {0}: this pallet type {1} can''t hold \
-a specimen of type {2}
+ScanAssign.activitylog.aliquot.positionTaken=ERROR in {0}\: Expected inventoryId {1} from patient {2} -- Found inventoryId {3} from patient {4}
+ScanAssign.activitylog.aliquot.dispatchedError=ERROR in {0}\: Cannot assign position to a specimen that still is in dispatch transit
+ScanAssign.activitylog.aliquot.moved=MOVED in {0}\: specimen {1} registered on another position\: {2}
+ScanAssign.activitylog.aliquot.otherSite=ERROR in {0}\: specimen {1} registered in another site\: {2} in position\: {3}
+ScanAssign.activitylog.aliquot.typeError=ERROR in {0}\: this pallet type {1} can''t hold a specimen of type {2}
 ScanAssign.activitylog.aliquot.assigned=ASSIGNED position {0} (site {1}) to specimen \
 {2} - Type\: {3} - Patient\: {4} - Visit\: {5}-{6}\n
 ScanAssign.activitylog.save.summary=SCAN-ASSIGN: {0} specimens added to pallet {1} of site {2}
 ScanAssign.okMessage=Assigning specimens location.
-ScanLink.activitylog.aliquot.existsError=ERROR in {0}: Specimen {1} already in \
-database linked to visit {2} of patient {3} (done by site {4})
+ScanLink.activitylog.aliquot.existsError=ERROR in {0}\: Specimen {1} already in database linked to visit {2} of patient {3} (done by site {4})
 ScanLink.activitylog.aliquot.linked=LINKED\: {0} - patient\: {1} - site\: {2} - \
 Visit\: {3} - {4} - {5}\n
-ScanLink.activitylog.save.summary=SCAN-LINK: {0} specimens linked to patient {1} \
-on site {2} for visit drawn on {3} (processed on {4})
+ScanLink.activitylog.save.summary=SCAN-LINK\: {0} specimens linked to patient {1} on site {2} for visit drawn on {3} (processed on {4})
 Cabinet.activitylog.checkingId=Checking inventoryID {0}
 Cabinet.activitylog.checkingPosition=Checking position {0}
 Cabinet.activitylog.checkPosition.error=ERROR: Position {0} already in use in container {1}
@@ -327,10 +322,8 @@ Cabinet.activitylog.checkParent.error.found=Can''t find bin labelled {0} in site
 Cabinet.activitylog.checkParent.error=ERROR: {0}
 Cabinet.activitylog.gettingInfoId=Getting informations for inventoryID {0}
 Cabinet.activitylog.aliquotInfo=Specimen {0}: current position={1}
-Cabinet.activitylog.aliquot.saveNew=LINKED/ASSIGNED: position {0} to specimen {1} - \
-Type: {2} - Patient: {3} - Visit: {4}-{5}
-Cabinet.activitylog.aliquot.saveMove=ASSIGNED: position {0} to specimen {1} - \
-Type: {2} - Patient: {3} - Visit: {4}-{5}
+Cabinet.activitylog.aliquot.saveNew=LINKED/ASSIGNED\: position {0} to specimen {1} - Type\: {2} - Patient\: {3} - Visit\: {4}-{5}
+Cabinet.activitylog.aliquot.saveMove=ASSIGNED\: position {0} to specimen {1} - Type\: {2} - Patient\: {3} - Visit\: {4}-{5}
 
 #Scan Link
 ScanLink.scanStatus.aliquot.alreadyExists=Specimen already in database
