scanlink now use specimenLink

--- a/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/messages.properties
+++ b/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/messages.properties
@@ -352,9 +352,10 @@ ScanLink.worksheet.specimens.error.msg=No specimens of this collection event hav
 added to a processing event with worksheet number ''{0}''
 ScanLink.worksheet.error.title=Worksheet number
 ScanLink.worksheet.error.msg=No processing event with worksheet number ''{0}'' has been found.
-ScanLink.source.column.title=Source Specimen Types
+ScanLink.source.column.title=Source Specimen
 ScanLink.result.column.title=Aliquoted Specimen Types
 ScanLink.scan.monitor.position=Processing position {0}
+
 
 AliquotedSpecimenSelectionWidget.selections.validation.msg=A source specimen type \
 and an aliquoted specimen type should be selected
