resolves problems in scanassign

--- a/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/messages.properties
+++ b/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/messages.properties
@@ -306,7 +306,7 @@ ScanAssign.activitylog.aliquot.moved=MOVED in {0}\: specimen {1} registered on a
 ScanAssign.activitylog.aliquot.otherSite=ERROR in {0}\: specimen {1} registered in another site\: {2} in position\: {3}
 ScanAssign.activitylog.aliquot.typeError=ERROR in {0}\: this pallet type {1} can''t hold a specimen of type {2}
 ScanAssign.activitylog.aliquot.assigned=ASSIGNED position {0} (site {1}) to specimen \
-{2} - Type\: {3} - Patient\: {4} - Visit\: {5}-{6}\n
+{2} - Type\: {3} - Patient\: {4} - Visit#\: {5}\n
 ScanAssign.activitylog.save.summary=SCAN-ASSIGN: {0} specimens added to pallet {1} of site {2}
 ScanAssign.okMessage=Assigning specimens location.
 ScanLink.activitylog.aliquot.existsError=ERROR in {0}\: Specimen {1} already in database linked to visit {2} of patient {3} (done by site {4})
